okay now actually ready.

--- a/report.tex
+++ b/report.tex
@@ -407,7 +407,7 @@ The remaining part of the conjecture to be proven is injectivity of $\rho$, whic
 Assume $r<n$. Every path in $\Gamma$ is congruent to a standard path modulo $\zerorelations$.
 \end{conjecture*}
 
-Once we have proven this technical result we will also have proven the following conjecture.
+Once we have proven this technical result we will also have proven the following conjectures.
 
 \begin{conjecture*}\ref{conjecture:generic-to-zero-schur}
 Suppose $r<n$. There is an isomorphism of $\integers$-algebras
@@ -419,6 +419,28 @@ such that
 \Psi(1_\lambda) &= 1_\lambda\\
 \Psi(E_i) &= E_i\\
 \Psi(F_i) &= F_i.
+\end{align*}
+for $i\in\modn$ and $\lambda\in\compositions$.
+\end{conjecture*}
+
+\begin{conjecture*}
+Suppose $r<n$. The composition
+\begin{equation*}
+\phi_0=\Psi\circ\rho^{-1}\colon\integers\Gamma/{\zerorelations}\to\zeroschur
+\end{equation*}
+is an isomorphism of $\integers$-algebras. Thus $\zeroschur$ is presented by a quiver with relations.
+\end{conjecture*}
+
+\begin{conjecture*}
+Suppose $r<n$. There is an isomorphism of $\qfrac$-algebras
+\begin{equation*}
+\phi_{\qfrac}\colon \qfrac\Gamma/{\qfrac\qrelations}\to\Qqschur
+\end{equation*}
+given by
+\begin{align*}
+\phi_{\qfrac}(e_{i,\lambda}) &= E_{i,\lambda}\\
+\phi_{\qfrac}(f_{i,\lambda}) &= F_{i,\lambda}\\
+\phi_{\qfrac}(k_\lambda) &= 1_\lambda
 \end{align*}
 for $i\in\modn$ and $\lambda\in\compositions$.
 \end{conjecture*}
